@@ -60,9 +60,10 @@ describe Puppet::Type.type(:group).provider(:gpasswd) do
           :combine => true)
         provider.expects(:execute).with('/usr/sbin/groupadd mygroup', {:custom_environment => {}})
         resource[:members] = ['test_one','test_two','test_three']
-        resource[:members].each do |member|
+        resource.property('members').shouldorig.each do |member|
           provider.expects(:execute).with("/usr/bin/gpasswd -a #{member} mygroup", {:custom_environment => {}})
         end
+
         provider.create
       end
     end
@@ -74,11 +75,13 @@ describe Puppet::Type.type(:group).provider(:gpasswd) do
         )
         resource[:members] = ['test_one','test_two','test_three']
         resource[:auth_membership] = :false
-        resource[:members].each do |member|
+        resource.property('members').shouldorig.each do |member|
           provider.expects(:execute).with("/usr/bin/gpasswd -a #{member} mygroup", {:custom_environment => {}})
         end
         provider.create
-        provider.members=(resource[:members])
+
+        provider.members
+        provider.members=(resource.property('members').shouldorig)
       end
     end
 
@@ -90,11 +93,13 @@ describe Puppet::Type.type(:group).provider(:gpasswd) do
         )
         resource[:auth_membership] = :false
         resource[:members] = ['test_one','test_two','test_three']
-        (resource[:members] | old_members).each do |member|
+        (resource.property('members').shouldorig | old_members).each do |member|
           provider.expects(:execute).with("/usr/bin/gpasswd -a #{member} mygroup", {:custom_environment => {}})
         end
         provider.create
-        provider.members=(resource[:members])
+
+        provider.members
+        provider.members=(resource.property('members').shouldorig)
       end
     end
 
@@ -107,14 +112,16 @@ describe Puppet::Type.type(:group).provider(:gpasswd) do
         resource[:auth_membership] = :true
         resource[:members] = ['test_one','test_two','test_three']
 
-        (resource[:members] - old_members).each do |to_add|
+        (resource.property('members').shouldorig - old_members).each do |to_add|
           provider.expects(:execute).with("/usr/bin/gpasswd -a #{to_add} mygroup", {:custom_environment => {}})
         end
-        (old_members - resource[:members]).each do |to_del|
+        (old_members - resource.property('members').shouldorig).each do |to_del|
           provider.expects(:execute).with("/usr/bin/gpasswd -d #{to_del} mygroup", {:custom_environment => {}})
         end
         provider.create
-        provider.members=(resource[:members])
+
+        provider.members
+        provider.members=(resource.property('members').shouldorig)
       end
     end
   end
